fixed naughty button

--- a/lib/app/public/main.css
+++ b/lib/app/public/main.css
@@ -1,5 +1,5 @@
 
-body {
+html {
   background: url(../images/Christmas-Background.jpg) no-repeat center center fixed;
   background-size: cover;
   font-family: Georgia, Helvetica, sans-serif;
