turned on Mariah

--- a/lib/app/views/index.erb
+++ b/lib/app/views/index.erb
@@ -12,7 +12,7 @@
         	<input type='text' name='idea[title]' /><br/>
         	<textarea name='idea[description]'></textarea><br/>
         	<input type='submit' value="" class="imgClass"/>
-          <!--   <audio src="/images/Mariah.mp3" controls></audio> -->
+          <audio src="/images/Mariah.mp3" controls></audio>
         </form>
     </div>
     <h3>Wish List</h3>
