--- a/lib/app/views/layout.erb
+++ b/lib/app/views/layout.erb
@@ -10,6 +10,7 @@
 		<nav>
 			<a href="<%= url('/')%>">Home</a>
 			<a href="<%= url('/playground')%>">Playground</a>
+			<a href="<%= url('/edit')%>">Edit</a>
 		</nav>
 		<!-- <link rel="stylesheet" href=main.css"> -->
 		<%= yield %>
@@ -18,4 +19,3 @@
 		</footer>
 	</body>
 </html>
-
