update text input boxes

--- a/lib/app/views/index.erb
+++ b/lib/app/views/index.erb
@@ -6,11 +6,14 @@
     <h1>All I Want For Christmas</h1>
     <div class="input-form">
         <form action='/' method='POST'>
-        	<p>
-        		Is Not You. <br> Instead, buy me this:
-        	</p>
-        	<input type='text' name='idea[title]' /><br/>
-        	<textarea name='idea[description]'></textarea><br/>
+          <p>
+            Is You. <br> But, can you also buy me this:
+          </p>
+          <div class="controls controls-row">
+          <input class="span3" type='text' name='idea[title]' placeholder="Name" /><br/>
+          </div>
+        	<!-- <input type='text' name='idea[title]' /><br/> -->
+        	<textarea class="span4" name='idea[description]' placeholder="Wish"></textarea><br/>
         	<input type='submit' value="" class="imgClass"/>
           <audio src="/images/Mariah.mp3" controls></audio>
         </form>
@@ -38,5 +41,3 @@
     </ul>
   </body>
 <!-- </html> -->
-
-
